--- a/libqasan/Makefile
+++ b/libqasan/Makefile
@@ -1,4 +1,11 @@
 CC := clang-8
 
-all:
+arch_i386:
+	$(CC) $(CFLAGS) -fPIC -shared -I ../include libqasan.c backdoor_i386.s -o libqasan.so -ldl $(LDFLAGS)
+
+arch_x86_64:
+	$(CC) $(CFLAGS) -fPIC -shared -I ../include libqasan.c backdoor_x86_64.s -o libqasan.so -ldl $(LDFLAGS)
+
+arch_other:
 	$(CC) $(CFLAGS) -fPIC -shared -I ../include libqasan.c -o libqasan.so -ldl $(LDFLAGS)
+
