--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ tests/double_free
 tests/oob_neg_read
 libclang_rt.asan-*.so
 qasan-qemu
+qasan-system
 qemu-x86_64
 libqasan.so
 libqasan/libqasan.so
