--- a/libqasan/Makefile
+++ b/libqasan/Makefile
@@ -1,6 +1,6 @@
 CC := clang-8
 CFLAGS += -Wno-int-to-void-pointer-cast -ggdb
-LDFLAGS += -ldl
+LDFLAGS += -ldl -pthread
 
 SRC := libqasan.c hooks.c malloc.c string.c uninstrument.c patch.c
 HDR := libqasan.h
